# mac-toolbar-claude-meter

./: .gitignore  .releaserc  AppIcon.icns  Cargo.toml  DMG_README.txt  InstallIcon.icns  README.md  build_dmg.sh  claude_meter.py  generate_icon.py  generate_logo.py  install.sh  uninstall.sh
.circleci/: config.yml
src/: api.rs  app.rs  gauge.rs  keychain.rs  launch_agent.rs  main.rs  notification.rs
